aplicando el css-2

--- a/index.html
+++ b/index.html
@@ -56,31 +56,32 @@
     <div>
         <h2>Mis Conocimientos</h2>
             <div class="grilla-conocimientos-programacion">
-                <div>
-                    <h3>Front End</h2>
+                <div class="col-1-conocimientos-programacion">
+                       <h3>Front End</h3>
                         <p>Html</p>
                         <p>CSS</p>
                         <p>JavaScript</p>
                         <p>Boostrap</p>
                         <p>Foundation</p>
-                        <img src="images/css.png" alt="CSS">
+                        <img class="foto-conocimientos-programacion" src="images/css.png" alt="CSS">
                 </div>
-                <div>
-                    <h3>Back End</h2>
+                <div class="col-2-conocimientos-programacion">
+                        <h3>Back End</h3>
                         <p>Python</p>
                         <p>Java</p>
                         <p>PHP</p>
                         <p>GO</p>
                         <p>DART</p>
-                        <img src="images/python.png" alt="Python">
+                        <img class="foto-conocimientos-programacion" src="images/python.png" alt="Python">
                 </div>
-                <div>
-                    <h3>Base de Datos</h2>
+                <div class="col-3-conocimientos-programacion">
+                        <h3>Base de Datos</h3>
                         <p>MySQL</p>
                         <p>Postgre SQL</p>
                         <p>Maria SQL</p>
                         <p>Mongo DB</p>
-                        <img src="images/postgre.png" alt="PostgreSQL">
+                        <p>        </p>
+                        <img class="foto-conocimientos-programacion" src="images/postgre.png" alt="PostgreSQL">
                 </div>
             </div>
         
