--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <section class="text__cover">
                     <h1>Trabaje inteligentemente con infinitas posibilidades</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt sunt molestias cumque sed laborum reprehenderit consequuntur maiores quasi accusantium delectus, aut similique quis quod reiciendis quisquam itaque ipsam qui corrupti.</p>
-                    <a href="#" class="btn__text-cover">Empezar</a>
+                    <a href="#" class="btn__text-cover btn__text">Empezar</a>
                 </section>
                 <section class="image__cover">
                     <img src="images/programador.png" alt="programador">
@@ -50,6 +50,35 @@
             </div>
 
         </div> 
+
+        <!--generador de confianza-->
+
+        <div class="container__trst card-primary">
+            <div class="trust card__primary">
+                <div class="text__trust text__card-primary">
+                    <p>GENERA CONFIANZA PRIMERO</p>
+                    <h1>Controla tu negocio con un solo toque</h1>
+                </div>
+                <div class="container__trust container__box__card__primary">
+                    <div class="card__trust box__card-primary">
+                        <img src="/images/anchor.png" alt="">
+                        <h2>Control empresarial completo</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, neque! Velit id ad, numquam asperiores omnis ea expedita ducimus aliquam soluta reprehenderit saepe consequuntur, reiciendis exercitationem recusandae nisi modi! Itaque.</p>
+                    </div>
+                    <div class="card__trust box__card-secondary">
+                        <img src="/images/archive.png" alt="">
+                        <h2>Informes y analisis criticos</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, neque! Velit id ad, numquam asperiores omnis ea expedita ducimus aliquam soluta reprehenderit saepe consequuntur, reiciendis exercitationem recusandae nisi modi! Itaque.</p>
+                    </div>
+                    <div class="card__trust box__card-terciary">
+                        <img src="/images/user.png" alt="">
+                        <h2>satisfaccion del usuario garantizada</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, neque! Velit id ad, numquam asperiores omnis ea expedita ducimus aliquam soluta reprehenderit saepe consequuntur, reiciendis exercitationem recusandae nisi modi! Itaque.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
 
 
